@@ -1,3 +1,8 @@
+2010-11-16  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* win/tkWinPort.h  [Bug #3110161]: Extensions using TCHAR don't compile
+	on VS2005 SP1
+
 2010-11-04  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* library/msgs/de.msg:  Updated German messages.  Thanks to Ruediger
